--- a/src/Components/NewTripForm/NewTripForm.css
+++ b/src/Components/NewTripForm/NewTripForm.css
@@ -1,11 +1,12 @@
-form {
-  background-color: #14403D;
+.NewTripForm form {
+  background-color: cadetblue;
   display: flex;
   flex-direction: column;
+  box-shadow: 10px 10px 30px 10px black;
   width: 30%;
   margin: 0 auto;
-  margin-top: 10%;
-  border: 2px cadetblue solid;
+  margin-top: 6%;
+  border: 3px #0B2827 solid;
   gap: 8px;
   padding: 3px;
   padding-bottom: 25px;
@@ -28,3 +29,39 @@ h2 {
   font-size: 2rem;
 }
 
+.NewTripForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  gap: 2rem;
+}
+
+.carSelectBox {
+  width: 30%;
+  margin: 0 auto ;
+  color: #D9D9D9;
+  background-color: #0B2827;
+  opacity: .6;
+  box-shadow: 1px 1px 100px 10px black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: .5em 2em;
+  align-items: center;
+  font-size: 1.3rem;
+  transition: .5s;
+}
+
+.carSelectBox:hover {
+  opacity: 1;
+}
+
+.carSelectBox select{
+  width: 70%;
+  margin-left: 5px;
+}
+
+.spacer{
+  margin-right: 13px;
+}
