--- a/src/Components/NewTripModal/NewTripModal.css
+++ b/src/Components/NewTripModal/NewTripModal.css
@@ -9,6 +9,11 @@ img {
 .tripInfo{
   list-style-type: none;
   height: 100%;
-  line-height: 2.5em;
-  font-size: 1.1rem;
+  line-height: 2.8em;
+  font-size: 1.5rem;
+  font-family: 'righteous';
+}
+
+.infoHeader {
+  border-bottom: 2px white solid;
 }
