--- a/src/Components/UpdateTripModal/UpdateTripModal.css
+++ b/src/Components/UpdateTripModal/UpdateTripModal.css
@@ -2,17 +2,27 @@
   width: 100%;
   background-color: inherit;
   color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.UpdateTripForm label {
+  font-size: 1.2rem;
+}
+
+.UpdateTripForm input {
+  border-radius: 10px;
+  padding: 2px 10px;
 }
 
 .submitButton {
   border-radius: 10px;
-  background-color: rgba(200, 187, 90, 0.7);
+  background-color: #0B2827;
   padding: .25em 1em;
-  color: black;
+  color: white;
   transition: .5s;
   border: 2px black solid;
 }
 
-.submitButton:hover {
-  background-color: hsla(200, 25%, 50%, 1);
-}
