styling round 1 lets go bois

--- a/src/Components/NewTripForm/NewTripForm.css
+++ b/src/Components/NewTripForm/NewTripForm.css
@@ -1,8 +1,9 @@
 .NewTripForm {
-  background-color: #222;
+  /* background-color: #222; */
 }
 
 form {
+  background-color: #14403D;
   display: flex;
   flex-direction: column;
   width: 30%;
