--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
 .App {
   text-align: center;
   margin: 0;
-  background-color: #222;
   color: #bbb;
+  font-family: 'Righteous', cursive;
 }
