--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+.NavBar {
+  background-color: cadetblue;
+  padding: 10px;
+  font-family: 'Righteous', cursive;
+}
 .NavBar ul {
   display: flex;
   justify-content: space-evenly;
@@ -7,11 +14,6 @@
 
 button{
   margin: 0;
-}
-
-.NavBar {
-  background-color: cadetblue;
-  padding: 10px;
 }
 
 h1 {
