--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,3 +1,4 @@
+
 .profile-cards {
   display: flex;
   flex-wrap: wrap;
@@ -5,11 +6,13 @@
   justify-content: space-around;
   gap: 1rem;
   color: #010101;
+  
 }
 
 .card {
   margin-top: 2rem;
   border: none;
+  box-shadow: 10px 10px 50px 50px rgba(87, 87, 87, 0.49);
 }
 
 .card-text {
