--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -45,12 +45,13 @@ h1 {
 
 }
 
-a{
-  color: #0B2827;
-  transition: all .3s ease;
+p {
+  margin: 0;
+  padding: 0;
 }
 
 #profile-img {
   border-radius: 50%;
   width: 50px;
 }
+
