--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 .App {
-  /* text-align: center; */
+  text-align: center;
   margin: 0;
   font-family: 'Righteous', cursive;
 }
 
 body {
   background: url('./map-background.jpg');
-  /* opacity: .7; */
 }
 
 
 .welcome {
   position: relative
-    /* display: flex; */
 }
 
 .welcome h1 {
@@ -38,7 +36,7 @@ body {
 
 }
 
-.welcome button {
+.login-button {
   margin-top: 21rem;
   margin-left: 28rem;
   font-size: 1.5rem;
@@ -46,12 +44,10 @@ body {
   color: #0B2827;
   border-radius: 25px;
   transition: all .3s ease;
-  /* transform: scale(1); */
-  box-shadow: 0px 1px 0px 0px;
 
 }
 
-.welcome button:hover {
+.login-button:hover {
   transform: scale(1.1) ;
   box-shadow: 0px 2px 0px 0px;
 }
@@ -66,7 +62,7 @@ body {
     margin-left: 5rem;
    }
 
-   .welcome button{
+   .login-button{
     margin-top: 25rem;
     margin-left: 15rem;
    }
