more saved trips adjustment

--- a/src/Components/SavedTrip/SavedTrip.css
+++ b/src/Components/SavedTrip/SavedTrip.css
@@ -4,6 +4,8 @@
   width: 30%;
   background-color: cadetblue;
   text-align: center;
+  box-shadow: 10px 15px 50px 5px #131313;
+
 }
 
 .button-group {
