--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 2px 15px 5px rgba(126,167,176,0.5);
+  margin-bottom: 2.5rem;
 }
 
 .NavBar ul {
