--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 2px 15px 5px rgba(126,167,176,0.5);
-  margin-bottom: 2.5rem;
+  /* margin-bottom: 2.5rem; */
 }
 
 .NavBar ul {
@@ -23,7 +23,7 @@
 
 }
 
-button{
+.NavBar button{
   margin: 0;
   background-color: #0B2827;
   color: #D9D9D9;
@@ -32,7 +32,7 @@ button{
   transition: all .3s ease;
 }
 
-button:hover, a:hover {
+.NavBar button:hover, a:hover {
   transform: scale(1.1) ;
 }
 
